--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 
 <head>
     <title> Website Template 320 </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <nav>
-        <ul>
+        <ul class="topnav">
             <li><a href="#home">Home</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#signUp">Sign-Up</a></li>
-            <li><a href="#signIn">Sign-In</a></li>
+            <li class="topnav-right"><a href="#signUp">Sign-Up</a></li>
+            <li class="topnav-right"><a href="#signIn">Sign-In</a></li>
         </ul>
     </nav>
 </body>
