--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li><a href="#about">About</a></li>
             <li class="topnav-right"><a href="#signUp">Sign-Up</a></li>
             <li class="topnav-right"><a href="#signIn">Sign-In</a></li>
+            <li class="dropdownIcon"><a href="">&#9776;</a></li>
         </ul>
     </nav>
 
