--- a/index.html
+++ b/index.html
@@ -8,17 +8,28 @@
 
 <body>
     <nav>
-        <ul class="topnav">
+        <ul class="topnav" id="dropdownClick">
             <li><a href="#home">Home</a></li>
             <li><a href="#news">News</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#about">About</a></li>
             <li class="topnav-right"><a href="#signUp">Sign-Up</a></li>
             <li class="topnav-right"><a href="#signIn">Sign-In</a></li>
-            <li class="dropdownIcon"><a href="">&#9776;</a></li>
+            <li class="dropdownIcon"><a href="javascript:void(0)" onclick="dropdownMenu()">&#9776;</a></li>
         </ul>
     </nav>
 
+
+    <script>
+        function dropdownMenu() {
+            var x = document.getElementById("dropdownClick");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    </script>
 
 
 </body>
