--- a/index.html
+++ b/index.html
@@ -19,6 +19,33 @@
         </ul>
     </nav>
 
+    <div class="container" id="section_1_gradient">
+        <div class="row">
+            <div class="col-6 leftside-col">
+                <div>
+                    <h1 class="large"> Flyhightech </h1>
+                    <h1 class="large"> Made for Developers </h1>
+                </div>
+                <form>
+                    <div>
+                        <h2>Username</h2>
+                        <input class="inputbox" name="username" type="text" placeholder="Username">
+                        <h2>Password</h2>
+                        <input class="inputbox" name="password" type="text" placeholder="Password">
+                    </div>
+                </form>
+            </div>
+            <div class="col-6">
+
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
 
     <script>
         function dropdownMenu() {
