Added a iframe to the project.

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
     <div class="container" id="section_1_gradient">
         <div class="row">
-            <div class="col-6 leftside-col">
-                <div>
+            <div class="col-6">
+                <div class="leftside-col">
                     <h1 class="large"> Flyhightech </h1>
                     <h1 class="large"> Made for Developers </h1>
                 </div>
                 <form>
-                    <div>
+                    <div class="leftside-col">
                         <h2>Username</h2>
                         <input class="inputbox" name="username" type="text" placeholder="Username">
                         <h2>Password</h2>
@@ -36,7 +36,10 @@
                 </form>
             </div>
             <div class="col-6">
-
+                <div class="rightSide-col">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IjWfwkLSKtA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+                    </iframe>
+                </div>
             </div>
         </div>
 
