End of section 5 lecture 35

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
                 </form>
             </div>
             <div class="col-6">
-                <div class="rightSide-col">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/IjWfwkLSKtA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
+                <div class="rightside-col">
+                    <div>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/IjWfwkLSKtA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
                     </iframe>
+                    </div>
                 </div>
             </div>
         </div>
