--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                     </div>
                     <div>
                         <label> Chat with me </label>
+                        <p>Lorem ipsum dolor amet umami austin vexillologist, tumeric food truck craft beer sartorial truffaut pok pok.
+                        </p>
                     </div>
                 </div>
             </div>
