End Section 5 Lecture 36

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                 </div>
             </div>
         </div>
-
     </div>
+
 
     <header>
         <h1 class="section2Header">The Coders Journey</h1>
@@ -70,6 +70,35 @@
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="col-4">
+                <div class="box">
+                    <div class="icon">
+                        <img src="devIcon.png">
+                    </div>
+                    <div>
+                        <label> Learn Code </label>
+                        <p>Lorem ipsum dolor amet umami austin vexillologist, tumeric food truck craft beer sartorial truffaut pok pok.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="box">
+                    <div class="icon">
+                        <img src="devIcon.png">
+                    </div>
+                    <div>
+                        <label> Design App </label>
+                        <p>Lorem ipsum dolor amet umami austin vexillologist, tumeric food truck craft beer sartorial truffaut pok pok.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <button class="learnMore"> Learn More </button>
             </div>
         </div>
     </div>
