--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<!-- Test -->
 
 <head>
     <title> BernardTheEngineer </title>
@@ -116,6 +117,7 @@
                 x.className = "topnav";
             }
         }
+
     </script>
 
 
