End of Section 5 Lecture 37

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
         <div class="row">
             <div class="col-6">
                 <div class="leftside-col">
-                    <h1 class="large"> Flyhightech </h1>
-                    <h1 class="large"> Made for Developers </h1>
+                    <h1 class="large"> Built for Developers </h1>
                 </div>
                 <form>
                     <div class="leftside-col">
@@ -45,8 +44,8 @@
             <div class="col-6">
                 <div class="rightside-col">
                     <div class="videoContainer">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/IjWfwkLSKtA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
-                    </iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/EnHkibxvdfU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
                     </div>
                 </div>
             </div>
@@ -101,10 +100,23 @@
             </div>
         </div>
     </div>
-
-
-
-
+    <hr>
+    <div class="container">
+        <div class="row">
+            <div class="col-7">
+                <article>
+                    <p>
+                        Forage intelligentsia coloring book slow-carb butcher unicorn tousled keffiyeh. Heirloom ethical jianbing retro stumptown knausgaard intelligentsia authentic selfies celiac kinfolk gluten-free venmo.
+                    </p>
+                </article>
+            </div>
+            <div class="col-5">
+                <div class="slopeIcon">
+                    <img src="iOS-Slope.png">
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Below are the scripts -->
     <script>
