--- a/index.html
+++ b/index.html
@@ -129,27 +129,27 @@
                 </ul>
             </div>
             <div class="col-3 mobileStack">
-                <h1>Company</h1>
+                <h1>Products</h1>
                 <ul>
-                    <li>About</li>
-                    <li>Blog</li>
-                    <li>Careers</li>
+                    <li>Electronics</li>
+                    <li>Games</li>
+                    <li>Apps</li>
                 </ul>
             </div>
             <div class="col-3 mobileStack">
-                <h1>Company</h1>
+                <h1>Learn More</h1>
                 <ul>
-                    <li>About</li>
-                    <li>Blog</li>
-                    <li>Careers</li>
+                    <li>Developers</li>
+                    <li>Designers</li>
+                    <li>Creators</li>
                 </ul>
             </div>
             <div class="col-3 mobileStack">
-                <h1>Company</h1>
+                <h1>Support</h1>
                 <ul>
-                    <li>About</li>
-                    <li>Blog</li>
-                    <li>Careers</li>
+                    <li>Help</li>
+                    <li>Q/A</li>
+                    <li>Contacts</li>
                 </ul>
             </div>
         </div>
@@ -165,6 +165,7 @@
                 x.className = "topnav";
             }
         }
+
     </script>
 
 
